--- a/general_frontend/package.json
+++ b/general_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "general_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,8 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.52",
-    "@types/react": "^18.2.21",
+    "@types/node": "^16.18.54",
+    "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
