--- a/general_frontend/package.json
+++ b/general_frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-grid-layout": "^1.4.2",
+    "react-sizeme": "^3.0.2",
     "swr": "^2.2.4"
   },
   "devDependencies": {
