--- a/general_frontend/package.json
+++ b/general_frontend/package.json
@@ -16,6 +16,8 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
