--- a/general_frontend/package.json
+++ b/general_frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -16,8 +17,10 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.201",
     "@types/node": "20.9.0",
-    "@types/react": "18.2.37",
+    "@types/react": "^18.2.37",
+    "@types/react-grid-layout": "^1.3.5",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
