--- a/general_frontend/package.json
+++ b/general_frontend/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "next": "13.5.6",
     "react": "^18",
+    "react-aria": "^3.30.0",
     "react-dom": "^18",
     "react-grid-layout": "^1.4.2",
     "swr": "^2.2.4"
