--- a/general_frontend/package.json
+++ b/general_frontend/package.json
@@ -13,8 +13,10 @@
     "next": "13.5.6",
     "react": "^18",
     "react-aria": "^3.30.0",
+    "react-aria-components": "^1.0.0-rc.0",
     "react-dom": "^18",
     "react-grid-layout": "^1.4.2",
+    "recharts": "^2.10.1",
     "swr": "^2.2.4"
   },
   "devDependencies": {
