--- a/general_frontend/package.json
+++ b/general_frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.32.2",
+    "@types/react-dom": "^18.2.17",
     "lodash": "^4.17.21",
     "next": "13.5.6",
     "react": "^18",
